--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,25 @@
             <img src="media/php.svg" class="tier-1 logos"/>
             <img src="media/html-5.svg" class="tier-1 logos"/>
             <img src="media/css-3.svg" class="tier-1 logos"/>
+            <img src="media/gulp.svg" class="tier-1 logos"/>
+            <img src="media/bootstrap.svg" class="tier-2 logos"/>
+            <img src="media/codepen.svg" class="tier-2 logos"/>
+            <img src="media/browserify.png" class="tier-2 logos"/>
+            <img src="media/cordova.png" class="tier-2 logos"/>
+            <img src="media/grunt.svg" class="tier-2 logos"/>
+            <img src="media/handlebars.svg" class="tier-2 logos"/>
+            <img src="media/ionic.svg" class="tier-2 logos"/>
+            <img src="media/mocha.svg" class="tier-2 logos"/>
+            <img src="media/mongodb.svg" class="tier-2 logos"/>
+            <img src="media/mysql.svg" class="tier-2 logos"/>
+            <img src="media/wordpress.svg" class="tier-2 logos"/>
+            <img src="media/meteor.png" class="tier-3 logos"/>
+            <img src="media/npm.svg" class="tier-3 logos"/>
+            <img src="media/polymer.svg" class="tier-3 logos"/>
+            <img src="media/python.svg" class="tier-3 logos"/>
+            <img src="media/ruby.svg" class="tier-3 logos"/>
+            <img src="media/rest.svg" class="tier-3 logos"/>
+            <img src="media/yeoman.svg" class="tier-3 logos"/>
         </div>
 
 		<!-- build:js(bower_components) scripts/vendor.min.js -->
