refactor logos / initial layout

--- a/app/index.html
+++ b/app/index.html
@@ -1,69 +1,104 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gil Barbara</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-        <link rel="icon" href="favicon.ico" type="image/x-icon" />
-        <!-- build:css(.tmp) styles/main.min.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
-		<!-- build:js(bower_components) scripts/vendor/modernizr.min.js -->
-		<script src="bower_components/modernizr/modernizr.js"></script>
-		<!-- endbuild -->
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Gil Barbara</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <!-- build:css(.tmp) styles/main.min.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+    <!-- build:js(bower_components) scripts/vendor/modernizr.min.js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
 
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+</head>
+<body>
+<!--[if lt IE 10]>
+<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
 
-        <div class="board">
-            <img src="media/js.svg" class="tier-1 logos"/>
-            <img src="media/jquery.svg" class="tier-1 logos"/>
-            <img src="media/backbone.svg" class="tier-1 logos"/>
-            <img src="media/bower.svg" class="tier-1 logos"/>
-            <img src="media/d3.svg" class="tier-1 logos"/>
-            <img src="media/github.svg" class="tier-1 logos"/>
-            <img src="media/nodejs.svg" class="tier-1 logos"/>
-            <img src="media/react.svg" class="tier-1 logos"/>
-            <img src="media/sass.svg" class="tier-1 logos"/>
-            <img src="media/php.svg" class="tier-1 logos"/>
-            <img src="media/html-5.svg" class="tier-1 logos"/>
-            <img src="media/css-3.svg" class="tier-1 logos"/>
-            <img src="media/gulp.svg" class="tier-1 logos"/>
-            <img src="media/bootstrap.svg" class="tier-2 logos"/>
-            <img src="media/codepen.svg" class="tier-2 logos"/>
-            <img src="media/browserify.png" class="tier-2 logos"/>
-            <img src="media/cordova.png" class="tier-2 logos"/>
-            <img src="media/grunt.svg" class="tier-2 logos"/>
-            <img src="media/handlebars.svg" class="tier-2 logos"/>
-            <img src="media/ionic.svg" class="tier-2 logos"/>
-            <img src="media/mocha.svg" class="tier-2 logos"/>
-            <img src="media/mongodb.svg" class="tier-2 logos"/>
-            <img src="media/mysql.svg" class="tier-2 logos"/>
-            <img src="media/wordpress.svg" class="tier-2 logos"/>
-            <img src="media/meteor.png" class="tier-3 logos"/>
-            <img src="media/npm.svg" class="tier-3 logos"/>
-            <img src="media/polymer.svg" class="tier-3 logos"/>
-            <img src="media/python.svg" class="tier-3 logos"/>
-            <img src="media/ruby.svg" class="tier-3 logos"/>
-            <img src="media/rest.svg" class="tier-3 logos"/>
-            <img src="media/yeoman.svg" class="tier-3 logos"/>
+<header class="main-header">
+    <div class="container">
+        <h1>Gil Barbara</h1>
+        <h2>Front-End Developer - UI/UX</h2>
+
+        <div class="row">
+            <div class="col-xs-6">
+                <a href="mailto:gilbarbara@gmail.com" target="_blank">Contato</a>
+            </div>
+            <div class="col-xs-6">
+                <a href="http://kollectiv.org" target="_blank">Portifólio</a>
+            </div>
         </div>
+    </div>
+</header>
 
-		<!-- build:js(bower_components) scripts/vendor.min.js -->
-		<script src="/bower_components/underscore/underscore.js"></script>
-        <script src="/bower_components/jquery/dist/jquery.js"></script>
-        <!-- endbuild -->
+<main>
+<div class="container">
+    <div class="main-skills">
+        <h3>Javascript - HTML - CSS</h3>
+        <h3><span class="label label-primary">PHP - MYSQL</span></h3>
+    </div>
+    <div class="technologies">
+        jQuery, Backbone.js, Marionette.js, Require.js, d3.js, Meteor.js, EJS/Handlebars, Bower, Grunt/Gulp<br>
+        SVG, Sockets, Bootstrap, Less, Sass/Compass, Wordpress (temas e plug-ins), Laravel, Jasmine/Mocha<br>
+        MySQL, MongoDB, Node.js, PhoneGap, Git/SVN, Agile, REST API-avançado, Ruby-básico, Python-básico
+    </div>
 
-        <!-- build:js({.tmp,app}) scripts/main.min.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
-    </body>
+    <h3>Experiência Profissional</h3>
+
+    <div class="item">
+        <span>– Desde 2003</span><br>
+        Programador freelancer (em 2008 montei o estúdio <a href="http://kollectiv.org" target="_blank">Kollectiv</a>)<br>
+        Desenvolvi um CMS completo em PHP que ainda uso em alguns projetos mais complexos.
+    </div>
+
+    <div class="item">
+        <span>– Entre 1997 e 2012</span><br>
+        Sócio-Programador-Editor do site rraurl.com, o primeiro site brasileiro sobre música e comportamento alternativo e com uma comunidade participativa.<br>
+
+        <em>Experiência: PHP, HTML, Javascript, CSS, MySQL, SEO, SVN. Comunidade, usabilidade.</em>
+    </div>
+
+    <div class="item"><span>– Entre 1994 e 2010</span><br>
+        Administração de sistemas e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero/Lobo Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.<br>
+        <em>Experiência: Windows, Mac, Linux, Unix. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro, After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
+    </div>
+
+    <h3>Qualificações Técnicas</h3>
+    Vinte anos de experiência em informática (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl, Python, PHP, Applescript, Javascript, Objective C)<br>
+
+    <h3>Idiomas</h3>
+    Inglês Fluente (Leitura, Escrita e Conversação)
+
+    <h3>Projetos</h3>
+    <a href="http://github.com/gilbarbara" target="_blank">Github</a><br>
+    <a href="http://favstagr.am/" target="_blank">Favstagram</a><br>
+    <a href="http://apps.facebook.com/abovetheskyline/" target="_blank">Above The Skyline</a><br>
+    <a href="http://littlealchemyhelper.com/" target="_blank">LittleAlchemy Helper</a><br>
+
+    <h3>Informações adicionais</h3>
+    Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara" target="_blank">http://rraurl.com/gilbarbara</a>
+</div>
+</main>
+<!-- build:js(bower_components) scripts/vendor.min.js -->
+<script src="/bower_components/underscore/underscore.js"></script>
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<!-- endbuild -->
+
+<!-- build:js({.tmp,app}) scripts/main.min.js -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
+</body>
 </html>
