--- a/app/index.html
+++ b/app/index.html
@@ -41,51 +41,51 @@
 </header>
 
 <div class="logos">
-    <img src="media/adobe-illustrator.svg" class="ai"/>
-    <img src="media/adobe-photoshop.svg" class="ps"/>
-    <img src="media/backbone.svg" class="backbone"/>
-    <img src="media/bash.svg" class="bash"/>
-    <img src="media/bootstrap.svg" class="bootstrap"/>
-    <img src="media/bower.svg" class="bower"/>
-    <img src="media/browserify.png" class="browserify"/>
-    <img src="media/codepen.svg" class="codepen"/>
-    <img src="media/cordova.png" class="cordova"/>
-    <img src="media/css-3.svg" class="css-3"/>
-    <img src="media/d3.svg" class="d3"/>
-    <img src="media/emmet.svg" class="emmet"/>
-    <img src="media/github.svg" class="github"/>
-    <img src="media/goggle-chrome.svg" class="chrome"/>
-    <img src="media/grunt.svg" class="grunt"/>
-    <img src="media/gulp.svg" class="gulp"/>
-    <img src="media/handlebars.svg" class="handlebars"/>
-    <img src="media/html-5.svg" class="html-5"/>
-    <img src="media/ionic.svg" class="ionic"/>
-    <img src="media/jquery.svg" class="jquery"/>
-    <img src="media/js.svg" class="js"/>
-    <img src="media/laravel.svg" class="laravel"/>
-    <img src="media/less.svg" class="less"/>
-    <img src="media/marionette.svg" class="marionette"/>
-    <img src="media/meteor.svg" class="meteor"/>
-    <img src="media/mocha.svg" class="mocha"/>
-    <img src="media/modernizr.svg" class="modernizr"/>
-    <img src="media/mongodb.svg" class="mongodb"/>
-    <img src="media/mysql.svg" class="mysql"/>
-    <img src="media/nodejs.svg" class="nodejs"/>
-    <img src="media/npm.svg" class="npm"/>
-    <img src="media/octocat.svg" class="octocat"/>
-    <img src="media/php.svg" class="php"/>
-    <img src="media/polymer.svg" class="polymer"/>
-    <img src="media/python.svg" class="python"/>
-    <img src="media/react.svg" class="react"/>
-    <img src="media/rest.svg" class="rest"/>
-    <img src="media/ruby.svg" class="ruby"/>
-    <img src="media/sass.svg" class="sass"/>
-    <img src="media/sketch.svg" class="sketch"/>
-    <img src="media/svg.svg" class="svg"/>
-    <img src="media/swift.svg" class="swift"/>
-    <img src="media/webplatform.svg" class="webplatform"/>
-    <img src="media/wordpress.svg" class="wordpress"/>
-    <img src="media/yeoman.svg" class="yeoman"/>
+    <img src="media/adobe-illustrator.svg" class="adobe-ai" title="adobe illustrator"/>
+    <img src="media/adobe-photoshop.svg" class="adobe-ps" title="adobe photoshop"/>
+    <img src="media/backbone.svg" class="backbone" title="backbone"/>
+    <img src="media/bash.svg" class="bash" title="sh / bash / zsh"/>
+    <img src="media/bootstrap.svg" class="bootstrap" title="bootstrap"/>
+    <img src="media/bower.svg" class="bower" title="bower"/>
+    <img src="media/browserify.png" class="browserify" title="browserify"/>
+    <img src="media/codepen.svg" class="codepen" title="codepen"/>
+    <img src="media/cordova.png" class="cordova" title="cordova"/>
+    <img src="media/css-3.svg" class="css-3" title="css-3"/>
+    <img src="media/d3.svg" class="d3" title="d3"/>
+    <img src="media/eslint.svg" class="eslint" title="eslint"/>
+    <img src="media/emmet.svg" class="emmet" title="emmet"/>
+    <img src="media/github.svg" class="github" title="github"/>
+    <img src="media/goggle-chrome.svg" class="chrome" title="chrome"/>
+    <img src="media/grunt.svg" class="grunt" title="grunt"/>
+    <img src="media/gulp.svg" class="gulp" title="gulp"/>
+    <img src="media/handlebars.svg" class="handlebars" title="handlebars"/>
+    <img src="media/html-5.svg" class="html-5" title="html-5"/>
+    <img src="media/ionic.svg" class="ionic" title="ionic"/>
+    <img src="media/jquery.svg" class="jquery" title="jquery"/>
+    <img src="media/js.svg" class="js" title="javascript"/>
+    <img src="media/less.svg" class="less" title="less"/>
+    <img src="media/marionette.svg" class="marionette" title="marionette"/>
+    <img src="media/meteor.svg" class="meteor" title="meteor"/>
+    <img src="media/mocha.svg" class="mocha" title="mocha"/>
+    <img src="media/modernizr.svg" class="modernizr" title="modernizr"/>
+    <img src="media/mongodb.svg" class="mongodb" title="mongo db"/>
+    <img src="media/mysql.svg" class="mysql" title="mysql"/>
+    <img src="media/nodejs.svg" class="nodejs" title="node.js"/>
+    <img src="media/npm.svg" class="npm" title="npm"/>
+    <img src="media/octocat.svg" class="octocat" title="github"/>
+    <img src="media/php.svg" class="php" title="php"/>
+    <img src="media/polymer.svg" class="polymer" title="web components"/>
+    <img src="media/python.svg" class="python" title="python"/>
+    <img src="media/react.svg" class="react" title="react"/>
+    <img src="media/rest.svg" class="rest" title="rest-api"/>
+    <img src="media/ruby.svg" class="ruby" title="ruby"/>
+    <img src="media/sass.svg" class="sass" title="sass"/>
+    <img src="media/sketch.svg" class="sketch" title="sketch"/>
+    <img src="media/svg.svg" class="svg" title="svg"/>
+    <img src="media/swift.svg" class="swift" title="swift"/>
+    <img src="media/webplatform.svg" class="webplatform" title="web platform"/>
+    <img src="media/wordpress.svg" class="wordpress" title="wordpress"/>
+    <img src="media/yeoman.svg" class="yeoman" title="yeoman"/>
 </div>
 
 <main>
