--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,9 @@
     <h2>Front-End Developer - UI/UX</h2>
 
     <div class="menu clearfix">
-            <a href="mailto:gilbarbara@gmail.com" target="_blank">Contato</a>
+        <a href="mailto:gilbarbara@gmail.com" target="_blank">Contato</a>
 
-            <a href="http://kollectiv.org" class="text-right" target="_blank">Portifólio</a>
+        <a href="http://kollectiv.org" class="text-right" target="_blank">Portifólio</a>
     </div>
 </header>
 
@@ -121,40 +121,71 @@
 
         <h3>Experiência Profissional</h3>
 
-        <div class="item">
-            <span>– Desde 2003</span><br>
-            Programador freelancer (em 2008 montei o estúdio <a href="http://kollectiv.org"
-                                                                target="_blank">Kollectiv</a>)<br>
-            Desenvolvi um CMS completo em PHP que ainda uso em alguns projetos mais complexos.
-        </div>
+        <div class="experience">
+            <div>
+                <span>– Desde Dez/2014</span>
+                <a href="http://kollectiv.org" class="title"
+                   target="_blank">Vérios Investimentos</a>
+                Desenvolvimento de um sistema de investimento automatizado (robo advisor)
+            </div>
 
-        <div class="item">
-            <span>– Entre 1997 e 2012</span><br>
-            Sócio-Programador-Editor do site rraurl.com, o primeiro site brasileiro sobre música e comportamento
-            alternativo e com uma comunidade participativa.<br>
+            <div>
+                <span>– Desde 2003</span>
+                <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
+                Programador freelancer
+            </div>
 
-            <em>Experiência: PHP, HTML, Javascript, CSS, MySQL, SEO, SVN. Comunidade, usabilidade.</em>
-        </div>
+            <div>
+                <span>– Entre 1997 e 2012</span>
+                <a href="http://rraurl.com" class="title"
+                   target="_blank">rraurl.com</a>
+                Sócio-Programador-Editor do site, o primeiro site brasileiro sobre música e comportamento
+                alternativo e com uma comunidade participativa.<br>
 
-        <div class="item"><span>– Entre 1994 e 2010</span><br>
-            Administração de sistemas e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero/Lobo
-            Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.<br>
-            <em>Experiência: Windows, Mac, Linux, Unix. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro,
-                After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
+                <em>Experiência: PHP, HTML, Javascript, CSS, MySQL, SEO, CSV. Comunidade, usabilidade.</em>
+            </div>
+
+            <div>
+                <span>– Entre 1994 e 2010</span>
+                Administração de sistemas e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor
+                Zero/Lobo
+                Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.<br>
+                <em>Experiência: Windows, Mac, Linux, Unix. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut
+                    Pro,
+                    After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
+            </div>
         </div>
 
         <h3>Qualificações Técnicas</h3>
-        Vinte anos de experiência em informática (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl,
-        Python, PHP, Applescript, Javascript, Objective C)<br>
+        Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl,
+        Python, Applescript, Javascript, Objective C)<br>
 
         <h3>Idiomas</h3>
         Inglês Fluente (Leitura, Escrita e Conversação)
 
         <h3>Projetos</h3>
-        <a href="http://github.com/gilbarbara" target="_blank">Github</a><br>
-        <a href="http://favstagr.am/" target="_blank">Favstagram</a><br>
-        <a href="http://apps.facebook.com/abovetheskyline/" target="_blank">Above The Skyline</a><br>
-        <a href="http://littlealchemyhelper.com/" target="_blank">LittleAlchemy Helper</a><br>
+
+        <div class="projects">
+
+            <a href="http://favstagram.me/" target="_blank">
+                <img src="media/projects/favstagram.svg" title="Favstagram"/>
+                Favstagram</a>
+            <a href="http://colormeup.co/" target="_blank">
+                <img src="media/projects/colormeup.svg" title="Colormeup"/>
+                Colormeup
+            </a>
+
+            <a href="http://apps.facebook.com/abovetheskyline/" target="_blank">
+                <img src="media/projects/skyline.svg" title="Above The Skyline"/>
+                Above The Skyline
+            </a>
+            <a href="http://littlealchemyhelper.com/" target="_blank">
+                <img src="media/projects/little-alchemy-helper.svg" title="Little Alchemy Helper"/>
+                LittleAlchemy Helper
+            </a>
+        </div>
+
+        veja mais em: <a href="http://github.com/gilbarbara" target="_blank">Github</a>
 
         <h3>Informações adicionais</h3>
         Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara" target="_blank">http://rraurl.com/gilbarbara</a>
