update layout and new logos

--- a/app/index.html
+++ b/app/index.html
@@ -29,64 +29,68 @@
 <![endif]-->
 
 <header class="main-header">
-    <h1>Gil Barbara</h1>
+    <h1>Gil Barbara</h1><br>
 
-    <h2>Front-End Developer - UI/UX</h2>
+    <h2>Front-End Developer - UI/UX</h2><br>
 
     <div class="menu clearfix">
         <a href="mailto:gilbarbara@gmail.com" target="_blank">Contato</a>
 
         <a href="http://kollectiv.org" class="text-right" target="_blank">Portifólio</a>
     </div>
-</header>
 
-<div class="logos">
-    <img src="media/adobe-illustrator.svg" class="adobe-ai" title="adobe illustrator"/>
-    <img src="media/adobe-photoshop.svg" class="adobe-ps" title="adobe photoshop"/>
-    <img src="media/backbone.svg" class="backbone" title="backbone"/>
-    <img src="media/bash.svg" class="bash" title="sh / bash / zsh"/>
-    <img src="media/bootstrap.svg" class="bootstrap" title="bootstrap"/>
-    <img src="media/bower.svg" class="bower" title="bower"/>
-    <img src="media/browserify.png" class="browserify" title="browserify"/>
-    <img src="media/codepen.svg" class="codepen" title="codepen"/>
-    <img src="media/cordova.png" class="cordova" title="cordova"/>
-    <img src="media/css-3.svg" class="css-3" title="css-3"/>
-    <img src="media/d3.svg" class="d3" title="d3"/>
-    <img src="media/eslint.svg" class="eslint" title="eslint"/>
-    <img src="media/emmet.svg" class="emmet" title="emmet"/>
-    <img src="media/github.svg" class="github" title="github"/>
-    <img src="media/goggle-chrome.svg" class="chrome" title="chrome"/>
-    <img src="media/grunt.svg" class="grunt" title="grunt"/>
-    <img src="media/gulp.svg" class="gulp" title="gulp"/>
-    <img src="media/handlebars.svg" class="handlebars" title="handlebars"/>
-    <img src="media/html-5.svg" class="html-5" title="html-5"/>
-    <img src="media/ionic.svg" class="ionic" title="ionic"/>
-    <img src="media/jquery.svg" class="jquery" title="jquery"/>
-    <img src="media/js.svg" class="js" title="javascript"/>
-    <img src="media/less.svg" class="less" title="less"/>
-    <img src="media/marionette.svg" class="marionette" title="marionette"/>
-    <img src="media/meteor.svg" class="meteor" title="meteor"/>
-    <img src="media/mocha.svg" class="mocha" title="mocha"/>
-    <img src="media/modernizr.svg" class="modernizr" title="modernizr"/>
-    <img src="media/mongodb.svg" class="mongodb" title="mongo db"/>
-    <img src="media/mysql.svg" class="mysql" title="mysql"/>
-    <img src="media/nodejs.svg" class="nodejs" title="node.js"/>
-    <img src="media/npm.svg" class="npm" title="npm"/>
-    <img src="media/octocat.svg" class="octocat" title="github"/>
-    <img src="media/php.svg" class="php" title="php"/>
-    <img src="media/polymer.svg" class="polymer" title="web components"/>
-    <img src="media/python.svg" class="python" title="python"/>
-    <img src="media/react.svg" class="react" title="react"/>
-    <img src="media/rest.svg" class="rest" title="rest-api"/>
-    <img src="media/ruby.svg" class="ruby" title="ruby"/>
-    <img src="media/sass.svg" class="sass" title="sass"/>
-    <img src="media/sketch.svg" class="sketch" title="sketch"/>
-    <img src="media/svg.svg" class="svg" title="svg"/>
-    <img src="media/swift.svg" class="swift" title="swift"/>
-    <img src="media/webplatform.svg" class="webplatform" title="web platform"/>
-    <img src="media/wordpress.svg" class="wordpress" title="wordpress"/>
-    <img src="media/yeoman.svg" class="yeoman" title="yeoman"/>
-</div>
+    <div class="logos">
+        <img src="media/adobe-illustrator.svg" class="adobe-ai" title="adobe illustrator"/>
+        <img src="media/adobe-photoshop.svg" class="adobe-ps" title="adobe photoshop"/>
+        <img src="media/angular.svg" class="angular" title="angular"/>
+        <img src="media/aws.svg" class="aws" title="amazon web services"/>
+        <img src="media/backbone.svg" class="backbone" title="backbone"/>
+        <img src="media/bash.svg" class="bash" title="sh / bash / zsh"/>
+        <img src="media/bootstrap.svg" class="bootstrap" title="bootstrap"/>
+        <img src="media/bower.svg" class="bower" title="bower"/>
+        <img src="media/browserify.svg" class="browserify" title="browserify"/>
+        <img src="media/codepen.svg" class="codepen" title="codepen"/>
+        <img src="media/cordova.png" class="cordova" title="cordova"/>
+        <img src="media/css-3.svg" class="css-3" title="css-3"/>
+        <img src="media/d3.svg" class="d3" title="d3"/>
+        <img src="media/eslint.svg" class="eslint" title="eslint"/>
+        <img src="media/emmet.svg" class="emmet" title="emmet"/>
+        <img src="media/git.svg" class="git" title="git"/>
+        <img src="media/github-icon.svg" class="github" title="github"/>
+        <img src="media/goggle-chrome.svg" class="chrome" title="chrome"/>
+        <img src="media/grunt.svg" class="grunt" title="grunt"/>
+        <img src="media/gulp.svg" class="gulp" title="gulp"/>
+        <img src="media/handlebars.svg" class="handlebars" title="handlebars"/>
+        <img src="media/html-5.svg" class="html-5" title="html-5"/>
+        <img src="media/ionic.svg" class="ionic" title="ionic"/>
+        <img src="media/jasmine.svg" class="jasmine" title="jasmine"/>
+        <img src="media/jquery.svg" class="jquery" title="jquery"/>
+        <img src="media/js.svg" class="js" title="javascript"/>
+        <img src="media/less.svg" class="less" title="less"/>
+        <img src="media/marionette.svg" class="marionette" title="marionette"/>
+        <img src="media/meteor.svg" class="meteor" title="meteor"/>
+        <img src="media/mocha.svg" class="mocha" title="mocha"/>
+        <img src="media/modernizr.svg" class="modernizr" title="modernizr"/>
+        <img src="media/mongodb.svg" class="mongodb" title="mongo db"/>
+        <img src="media/mysql.svg" class="mysql" title="mysql"/>
+        <img src="media/nodejs.svg" class="nodejs" title="node.js"/>
+        <img src="media/npm.svg" class="npm" title="npm"/>
+        <img src="media/octocat.svg" class="octocat" title="github"/>
+        <img src="media/php.svg" class="php" title="php"/>
+        <img src="media/polymer.svg" class="polymer" title="web components"/>
+        <img src="media/python.svg" class="python" title="python"/>
+        <img src="media/react.svg" class="react" title="react"/>
+        <img src="media/rest.svg" class="rest" title="rest-api"/>
+        <img src="media/ruby.svg" class="ruby" title="ruby"/>
+        <img src="media/sass.svg" class="sass" title="sass"/>
+        <img src="media/sketch.svg" class="sketch" title="sketch"/>
+        <img src="media/svg.svg" class="svg" title="svg"/>
+        <img src="media/swift.svg" class="swift" title="swift"/>
+        <img src="media/webplatform.svg" class="webplatform" title="web platform"/>
+        <img src="media/wordpress.svg" class="wordpress" title="wordpress"/>
+        <img src="media/yeoman.svg" class="yeoman" title="yeoman"/>
+    </div>
+</header>
 
 <main>
     <div class="container">
@@ -119,50 +123,6 @@
             </div>
         </div>
 
-        <h3>Experiência Profissional</h3>
-
-        <div class="experience">
-            <div>
-                <span>– Desde Dez/2014</span>
-                <a href="http://kollectiv.org" class="title"
-                   target="_blank">Vérios Investimentos</a>
-                Desenvolvimento de um sistema de investimento automatizado (robo advisor)
-            </div>
-
-            <div>
-                <span>– Desde 2003</span>
-                <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
-                Programador freelancer
-            </div>
-
-            <div>
-                <span>– Entre 1997 e 2012</span>
-                <a href="http://rraurl.com" class="title"
-                   target="_blank">rraurl.com</a>
-                Sócio-Programador-Editor do site, o primeiro site brasileiro sobre música e comportamento
-                alternativo e com uma comunidade participativa.<br>
-
-                <em>Experiência: PHP, HTML, Javascript, CSS, MySQL, SEO, CSV. Comunidade, usabilidade.</em>
-            </div>
-
-            <div>
-                <span>– Entre 1994 e 2010</span>
-                Administração de sistemas e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor
-                Zero/Lobo
-                Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.<br>
-                <em>Experiência: Windows, Mac, Linux, Unix. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut
-                    Pro,
-                    After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
-            </div>
-        </div>
-
-        <h3>Qualificações Técnicas</h3>
-        Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl,
-        Python, Applescript, Javascript, Objective C)<br>
-
-        <h3>Idiomas</h3>
-        Inglês Fluente (Leitura, Escrita e Conversação)
-
         <h3>Projetos</h3>
 
         <div class="projects">
@@ -187,8 +147,51 @@
 
         veja mais em: <a href="http://github.com/gilbarbara" target="_blank">Github</a>
 
+        <h3>Experiência Profissional</h3>
+
+        <div class="experience">
+            <div>
+                <span>– Desde Dez/2014</span>
+                <a href="http://kollectiv.org" class="title"
+                   target="_blank">Vérios Investimentos</a>
+                Desenvolvimento de sistema de investimento automatizado (robo advisor)
+
+                <em>Experiência: Node.js, Javascript (ES6 / React/Flux / Browserify), CSS3 (Sass / Less), MongoDB</em>
+            </div>
+
+            <div>
+                <span>– Desde 2003</span>
+                <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
+                Programador freelancer
+
+                <em>Experiência: PHP (Wordpress/Laravel), Node.js, Javascript (Backbone / Angular / D3), HTML5, SVG, CSS3 (Sass/Less), MySQL, MongoDB, Git, AWS, DevTools.</em>
+            </div>
+
+            <div>
+                <span>– Entre 1997 e 2012</span>
+                <a href="http://rraurl.com" class="title"
+                   target="_blank">rraurl.com</a>
+                Sócio-Programador-Editor do primeiro site brasileiro sobre música e comportamento e com uma comunidade participativa.
+
+                <em>Experiência: PHP, Ruby on Rails, HTML, Javascript, CSS, MySQL. SEO, metricas, comunidade, usabilidade.</em>
+            </div>
+
+            <div>
+                <span>– Entre 1994 e 2010</span>
+                Administrador de sistemas, programação e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero, Lobo Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.
+                <em>Experiência: Mac, Linux, Unix, Windows. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro, After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
+            </div>
+        </div>
+
+        <h3>Qualificações Técnicas</h3>
+        Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl, Python, Applescript, Javascript, Objective C)<br>
+
+        <h3>Idiomas</h3>
+        Inglês Fluente (Leitura, Escrita e Conversação)
+
         <h3>Informações adicionais</h3>
-        Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara" target="_blank">http://rraurl.com/gilbarbara</a>
+        Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara"
+                                                                target="_blank">http://rraurl.com/gilbarbara</a>
     </div>
 </main>
 
