--- a/app/index.html
+++ b/app/index.html
@@ -195,9 +195,7 @@
     </div>
 </main>
 
-<!-- build:js({bower_components,app}) scripts/main.min.js -->
-<script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/jquery/dist/jquery.js"></script>
+<!-- build:js(.tmp) scripts/main.min.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
 </body>
