--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,12 @@
     <title>Gil Barbara's Resume</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+    <meta property="og:url" content="http://gilbarbara.github.io/resume">
+    <meta property="og:title" content="Gil Barbara's Resume" />
+    <meta property="og:description" content="Front-End Developer. UI/UX." />
+    <meta property="og:image"
+          content="http://gilbarbara.github.io/resume/media/og-image.png" />
+    <meta property="og:type" content="website" />
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <!-- build:css(.tmp) styles/main.min.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -93,105 +99,147 @@
 </header>
 
 <main>
-    <div class="container">
-        <div class="skills">
-            <div class="branch">
-                <h4>HTML/CSS</h4>
 
-                <p>HTML5 (JADE/HAML), CSS3, Sass, Less, Emmet, SVG, Responsive Web Design, Bootstrap, Micro-frameworks, SEO</p>
-            </div>
-            <div class="branch">
-                <h4>Javascript</h4>
 
-                <p>React/Flux, Backbone/Marionette, Meteor, D3, Handlebars, Jasmine/Mocha. ES 5/6/7</p>
-            </div>
-
-            <div class="branch">
-                <h4>Back-end</h4>
-
-                <p>Node.js, PHP (Wordpress/Laravel), Ruby, Python, Objective-C, MySQL, MongoDB, Redis, Rest-API, Bash</p>
-            </div>
-            <div class="branch">
-                <h4>Dev Tools</h4>
-
-                <p>Gulp, Grunt, Git, Browserify, Bower, NPM, Yeoman, Cordova, Ionic</p>
-            </div>
-            <div class="branch">
-                <h4>UI/UX</h4>
-
-                <p>Adobe PS/AI, Sketch, Axure, Invision, OmniGraffle, Optimizely</p>
-            </div>
+    <div class="section summary">
+        <div class="container">
+            <h3 class="section__title">Resumo</h3>
+            <ul class="section__list">
+                <li>Amplo conhecimento em web design, desenvolvimento web e design gráfico.</li>
+                <li>Especializando-se em padrões web: HTML5, CSS3, SVG, Mobile, Responsivo.</li>
+                <li>Sólidas habilidades organizacionais, gerenciamento de projetos.</li>
+                <li>Confiável, motivado, trabalhador e atento aos detalhes.</li>
+                <li>Antenado com novas aplicações e tecnologias.</li>
+                <li>Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl, Python, Applescript, Javascript, Objective C)</li>
+                <li>Inglês Fluente (Leitura, Escrita e Conversação)</li>
+            </ul>
         </div>
+    </div>
 
-        <h3>Projetos</h3>
+    <div class="section skills">
+        <div class="container">
+            <h3 class="section__title">Tecnologias</h3>
+            <ul class="section__list">
+                <li class="branch">
+                    <h4>HTML/CSS</h4>
 
-        <div class="projects">
+                    <p>HTML5 (JADE/HAML), CSS3, Sass, Less, Emmet, SVG, Responsive Web Design, Bootstrap, Micro-frameworks, SEO</p>
+                </li>
+                <li class="branch">
+                    <h4>Javascript</h4>
 
-            <a href="http://favstagram.me/" target="_blank">
-                <img src="media/projects/favstagram.svg" title="Favstagram"/>
-                Favstagram</a>
-            <a href="http://colormeup.co/" target="_blank">
-                <img src="media/projects/colormeup.svg" title="Colormeup"/>
-                Colormeup
-            </a>
+                    <p>React/Flux, Backbone/Marionette, Meteor, D3, Handlebars, Jasmine/Mocha. ES 5/6/7</p>
+                </li>
 
-            <a href="http://apps.facebook.com/abovetheskyline/" target="_blank">
-                <img src="media/projects/skyline.svg" title="Above The Skyline"/>
-                Above The Skyline
-            </a>
-            <a href="http://littlealchemyhelper.com/" target="_blank">
-                <img src="media/projects/little-alchemy-helper.svg" title="Little Alchemy Helper"/>
-                LittleAlchemy Helper
-            </a>
+                <li class="branch">
+                    <h4>Back-end</h4>
+
+                    <p>Node.js, PHP (Wordpress/Laravel), Ruby, Python, Objective-C, MySQL, MongoDB, Redis, Rest-API, Bash</p>
+                </li>
+                <li class="branch">
+                    <h4>Dev Tools</h4>
+
+                    <p>Gulp, Grunt, Git, Browserify, Bower, NPM, Yeoman, Cordova, Ionic</p>
+                </li>
+                <li class="branch">
+                    <h4>UI/UX</h4>
+
+                    <p>Adobe PS/AI, Sketch, Axure, Invision, OmniGraffle, Optimizely</p>
+                </li>
+            </ul>
         </div>
+    </div>
 
-        veja mais em: <a href="http://github.com/gilbarbara" target="_blank">Github</a>
 
-        <h3>Experiência Profissional</h3>
+    <div class="section projects">
+        <div class="container">
+            <h3 class="section__title">Projetos</h3>
+            <ul class="section__list">
+                <li><a href="http://kollectiv.org/" target="_blank">
+                    <div class="img-wrapper">
+                        <img src="media/projects/kollectiv.svg" title="Kollectiv"/>
+                    </div>
 
-        <div class="experience">
-            <div>
-                <span>– Desde Dez/2014</span>
-                <a href="http://kollectiv.org" class="title"
-                   target="_blank">Vérios Investimentos</a>
-                Desenvolvimento de sistema de investimento automatizado (robo advisor)
-
-                <em>Experiência: Node.js (Hapi), Javascript (React/Flux / Browserify), CSS3 (Sass / Less), MongoDB, Agile</em>
-            </div>
-
-            <div>
-                <span>– Desde 2003</span>
-                <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
-                Programador freelancer
-
-                <em>Experiência: PHP (Wordpress/Laravel), Node.js (Express / Socket.io), Javascript (Backbone / Angular / D3), HTML5, SVG, CSS3 (Sass/Less), MySQL, MongoDB, Git, AWS, DevTools.</em>
-            </div>
-
-            <div>
-                <span>– Entre 1997 e 2012</span>
-                <a href="http://rraurl.com" class="title"
-                   target="_blank">rraurl.com</a>
-                Sócio-Programador-Editor do primeiro site brasileiro sobre música e comportamento e com uma comunidade participativa.
-
-                <em>Experiência: PHP, Ruby on Rails, HTML, Javascript, CSS, MySQL. SEO, metricas, comunidade, usabilidade.</em>
-            </div>
-
-            <div>
-                <span>– Entre 1994 e 2010</span>
-                Administrador de sistemas, programação e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero, Lobo Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.
-                <em>Experiência: Mac, Linux, Unix, Windows. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro, After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
-            </div>
+                    Kollectiv</a>
+                </li>
+                <li><a href="http://favstagram.me/" target="_blank">
+                    <div class="img-wrapper">
+                        <img src="media/projects/favstagram.svg" title="Favstagram"/>
+                    </div>
+                    Favstagram</a>
+                </li>
+                <li><a href="http://colormeup.co/" target="_blank">
+                    <div class="img-wrapper">
+                        <img src="media/projects/colormeup.svg" title="Colormeup"/>
+                    </div>
+                    Colormeup
+                </a>
+                </li>
+                <li><a href="http://apps.facebook.com/abovetheskyline/" target="_blank">
+                    <div class="img-wrapper">
+                        <img src="media/projects/skyline.svg" title="Above The Skyline"/>
+                    </div>
+                    Above The Skyline
+                </a>
+                </li>
+                <li><a href="http://littlealchemyhelper.com/" target="_blank">
+                    <div class="img-wrapper">
+                        <img src="media/projects/little-alchemy-helper.svg" title="Little Alchemy Helper"/>
+                    </div>
+                    LittleAlchemy Helper
+                </a>
+                </li>
+            </ul>
+            veja mais em: <a href="http://github.com/gilbarbara" target="_blank">Github</a>
         </div>
+    </div>
+    <div class="section experience">
+        <div class="container">
+            <h3 class="section__title">Experiência Profissional</h3>
+            <ul class="section__list">
+                <li>
+                    <span>– Desde Dez/2014</span>
+                    <a href="http://kollectiv.org" class="title"
+                       target="_blank">Vérios Investimentos</a>
+                    Desenvolvimento de sistema de investimento automatizado (robo advisor)
 
-        <h3>Qualificações Técnicas</h3>
-        Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl, Python, Applescript, Javascript, Objective C)<br>
+                    <em>Experiência: Node.js (Hapi), Javascript (React/Flux / Browserify), CSS3 (Sass / Less), MongoDB, Agile</em>
+                </li>
 
-        <h3>Idiomas</h3>
-        Inglês Fluente (Leitura, Escrita e Conversação)
+                <li>
+                    <span>– Desde 2003</span>
+                    <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
+                    Programador freelancer
 
-        <h3>Informações adicionais</h3>
-        Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara"
-                                                                target="_blank">http://rraurl.com/gilbarbara</a>
+                    <em>Experiência: PHP (Wordpress/Laravel), Node.js (Express / Socket.io), Javascript (Backbone / Angular / D3), HTML5, SVG, CSS3 (Sass/Less), MySQL, MongoDB, Git, AWS, DevTools.</em>
+                </li>
+
+                <li>
+                    <span>– Entre 1997 e 2012</span>
+                    <a href="http://rraurl.com" class="title"
+                       target="_blank">rraurl.com</a>
+                    Sócio-Programador-Editor do primeiro site brasileiro sobre música e comportamento e com uma comunidade participativa.
+
+                    <em>Experiência: PHP, Ruby on Rails, HTML, Javascript, CSS, MySQL. SEO, metricas, comunidade, usabilidade.</em>
+                </li>
+
+                <li>
+                    <span>– Entre 1994 e 2010</span>
+                    Administrador de sistemas, programação e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero, Lobo Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.
+                    <em>Experiência: Mac, Linux, Unix, Windows. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro, After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="container">
+            <h3 class="section__title">Informações adicionais</h3>
+
+            <p>Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara"
+                                                                       target="_blank">http://rraurl.com/gilbarbara</a>
+            </p>
+        </div>
     </div>
 </main>
 
