--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <title>Gil Barbara's Resume</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property="og:url" content="http://gilbarbara.github.io/resume">
+    <meta property="og:url" content="http://gilbarbara.github.io/resume/">
     <meta property="og:title" content="Gil Barbara's Resume" />
     <meta property="og:description" content="Front-End Developer. UI/UX." />
     <meta property="og:image"
