--- a/app/index.html
+++ b/app/index.html
@@ -97,18 +97,14 @@
         <img src="media/logos/yeoman.svg" class="yeoman" title="yeoman"/>
     </div>
     <div class="bio">
-        <p>Eu sou um programador front-end e uma paixão de criar produtos bem finalizados com foco em interface e usabilidade.</p>
+        <p>Sou um programador front-end apaixonado por criar produtos bem finalizados com foco em interface e usabilidade.</p>
 
-        <p>Moro em Perdizes, São Paulo com duas bull terriers e além de programar eu amo ciências e tocar como DJ desde 1987!<br>
-            <a href="https://www.mixcloud.com/gilbarbara/" target="_blank">Aqui</a> e <a
-                href="http://rraurl.com/gilbarbara" target="_blank">aqui</a>!</p>
+        <p>Moro em Perdizes, São Paulo com <a href="https://instagram.com/cora_zola/" target="_blank">duas bull terriers</a> e além de programar, eu amo ciências e tocar como DJ! Ouça <a href="https://www.mixcloud.com/gilbarbara/" target="_blank">aqui</a>.</p>
     </div>
 
 </header>
 
 <main>
-
-
     <div class="section summary">
         <div class="container">
             <h3 class="section__title">Resumo</h3>
@@ -118,7 +114,7 @@
                 <li>Sólidas habilidades organizacionais, gerenciamento de projetos.</li>
                 <li>Confiável, motivado, trabalhador e atento aos detalhes.</li>
                 <li>Antenado com novas aplicações e tecnologias.</li>
-                <li>Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, C++, Perl, Python, Applescript, Javascript, Objective C)</li>
+                <li>Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, Perl, Python, Applescript, Javascript, Objective C)</li>
                 <li>Inglês Fluente (Leitura, Escrita e Conversação)</li>
             </ul>
         </div>
