--- a/app/index.html
+++ b/app/index.html
@@ -98,8 +98,7 @@
     </div>
     <div class="bio">
         <p>Sou um programador front-end apaixonado por criar produtos bem finalizados com foco em interface e usabilidade.</p>
-
-        <p>Moro em Perdizes, São Paulo com <a href="https://instagram.com/cora_zola/" target="_blank">duas bull terriers</a> e além de programar, eu amo ciências e tocar como DJ! Ouça <a href="https://www.mixcloud.com/gilbarbara/" target="_blank">aqui</a>.</p>
+        <!--<p>Moro em Perdizes, São Paulo com <a href="https://instagram.com/cora_zola/" target="_blank">duas bull terriers</a> e além de programar, eu amo ciências e tocar como DJ! Ouça <a href="https://www.mixcloud.com/gilbarbara/" target="_blank">aqui</a>.</p>-->
     </div>
 
 </header>
