--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,11 @@
     <title>Gil Barbara's Resume</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-    <meta property="og:url" content="http://gilbarbara.github.io/resume/">
+    <meta property="og:url" content="http://gilbarbara.github.io/">
     <meta property="og:title" content="Gil Barbara's Resume"/>
     <meta property="og:description" content="Front-End Developer. UI/UX."/>
     <meta property="og:image"
-          content="http://gilbarbara.github.io/resume/media/og-image.png"/>
+          content="http://gilbarbara.github.io/media/og-image.png"/>
     <meta property="og:type" content="website"/>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <!-- build:css(.tmp) styles/main.min.css -->
