--- a/app/index.html
+++ b/app/index.html
@@ -33,221 +33,7 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-
-<header class="main-header">
-    <h1>Gil Barbara</h1><br>
-
-    <h2>Front-End Developer - UI/UX</h2><br>
-
-    <div class="menu clearfix">
-        <a href="mailto:gilbarbara@gmail.com" target="_blank">Contato</a>
-
-        <a href="http://kollectiv.org" class="text-right" target="_blank">Portifólio</a>
-    </div>
-
-    <div class="logos">
-        <img src="media/logos/adobe-illustrator.svg" class="adobe-ai" title="adobe illustrator"/>
-        <img src="media/logos/adobe-photoshop.svg" class="adobe-ps" title="adobe photoshop"/>
-        <img src="media/logos/angular.svg" class="angular" title="angular"/>
-        <img src="media/logos/aws.svg" class="aws" title="amazon web services"/>
-        <img src="media/logos/backbone.svg" class="backbone" title="backbone"/>
-        <img src="media/logos/bash.svg" class="bash" title="sh / bash / zsh"/>
-        <img src="media/logos/bootstrap.svg" class="bootstrap" title="bootstrap"/>
-        <img src="media/logos/bower.svg" class="bower" title="bower"/>
-        <img src="media/logos/browserify.svg" class="browserify" title="browserify"/>
-        <img src="media/logos/codepen.svg" class="codepen" title="codepen"/>
-        <img src="media/logos/cordova.png" class="cordova" title="cordova"/>
-        <img src="media/logos/css-3.svg" class="css-3" title="css-3"/>
-        <img src="media/logos/d3.svg" class="d3" title="d3"/>
-        <img src="media/logos/eslint.svg" class="eslint" title="eslint"/>
-        <img src="media/logos/emmet.svg" class="emmet" title="emmet"/>
-        <img src="media/logos/git.svg" class="git" title="git"/>
-        <img src="media/logos/github-icon.svg" class="github" title="github"/>
-        <img src="media/logos/goggle-chrome.svg" class="chrome" title="chrome"/>
-        <img src="media/logos/grunt.svg" class="grunt" title="grunt"/>
-        <img src="media/logos/gulp.svg" class="gulp" title="gulp"/>
-        <img src="media/logos/handlebars.svg" class="handlebars" title="handlebars"/>
-        <img src="media/logos/html-5.svg" class="html-5" title="html-5"/>
-        <img src="media/logos/ionic.svg" class="ionic" title="ionic"/>
-        <img src="media/logos/jasmine.svg" class="jasmine" title="jasmine"/>
-        <img src="media/logos/jquery.svg" class="jquery" title="jquery"/>
-        <img src="media/logos/js.svg" class="js" title="javascript"/>
-        <img src="media/logos/less.svg" class="less" title="less"/>
-        <img src="media/logos/marionette.svg" class="marionette" title="marionette"/>
-        <img src="media/logos/meteor.svg" class="meteor" title="meteor"/>
-        <img src="media/logos/mocha.svg" class="mocha" title="mocha"/>
-        <img src="media/logos/modernizr.svg" class="modernizr" title="modernizr"/>
-        <img src="media/logos/mongodb.svg" class="mongodb" title="mongo db"/>
-        <img src="media/logos/mysql.svg" class="mysql" title="mysql"/>
-        <img src="media/logos/nodejs.svg" class="nodejs" title="node.js"/>
-        <img src="media/logos/npm.svg" class="npm" title="npm"/>
-        <img src="media/logos/octocat.svg" class="octocat" title="github"/>
-        <img src="media/logos/php.svg" class="php" title="php"/>
-        <img src="media/logos/polymer.svg" class="polymer" title="web components"/>
-        <img src="media/logos/python.svg" class="python" title="python"/>
-        <img src="media/logos/react.svg" class="react" title="react"/>
-        <img src="media/logos/rest.svg" class="rest" title="rest-api"/>
-        <img src="media/logos/ruby.svg" class="ruby" title="ruby"/>
-        <img src="media/logos/sass.svg" class="sass" title="sass"/>
-        <img src="media/logos/sketch.svg" class="sketch" title="sketch"/>
-        <img src="media/logos/svg.svg" class="svg" title="svg"/>
-        <img src="media/logos/swift.svg" class="swift" title="swift"/>
-        <img src="media/logos/webplatform.svg" class="webplatform" title="web platform"/>
-        <img src="media/logos/wordpress.svg" class="wordpress" title="wordpress"/>
-        <img src="media/logos/yeoman.svg" class="yeoman" title="yeoman"/>
-    </div>
-    <div class="bio">
-        <p>Sou um programador front-end apaixonado por criar produtos bem finalizados com foco em interface e usabilidade.</p>
-        <!--<p>Moro em Perdizes, São Paulo com <a href="https://instagram.com/cora_zola/" target="_blank">duas bull terriers</a> e além de programar, eu amo ciências e tocar como DJ! Ouça <a href="https://www.mixcloud.com/gilbarbara/" target="_blank">aqui</a>.</p>-->
-    </div>
-
-</header>
-
-<main>
-    <div class="section summary">
-        <div class="container">
-            <h3 class="section__title">Resumo</h3>
-            <ul class="section__list">
-                <li>Amplo conhecimento em web design, desenvolvimento web e design gráfico.</li>
-                <li>Especializando-se em padrões web: HTML5, CSS3, SVG, Mobile, Responsivo.</li>
-                <li>Sólidas habilidades organizacionais, gerenciamento de projetos.</li>
-                <li>Confiável, motivado, trabalhador e atento aos detalhes.</li>
-                <li>Antenado com novas aplicações e tecnologias.</li>
-                <li>Vinte anos de experiência em computação (Windows, Mac OS, Unix, Linux, BSD) e desenvolvimento (C, Perl, Python, Applescript, Javascript, Objective C)</li>
-                <li>Inglês Fluente (Leitura, Escrita e Conversação)</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="section skills">
-        <div class="container">
-            <h3 class="section__title">Tecnologias</h3>
-            <ul class="section__list">
-                <li>
-                    <h4>HTML/CSS</h4>
-
-                    <p>HTML5 (JADE/HAML), CSS3, Sass, Less, Emmet, SVG, Responsive Web Design, Bootstrap, Micro-frameworks, SEO</p>
-                </li>
-                <li>
-                    <h4>Javascript</h4>
-
-                    <p>React/Flux, Backbone/Marionette, Meteor, D3, Handlebars, Jasmine/Mocha. ES 5/6/7</p>
-                </li>
-
-                <li>
-                    <h4>Back-end</h4>
-
-                    <p>Node.js, PHP (Wordpress/Laravel), Ruby, Python, Objective-C, MySQL, MongoDB, Redis, Rest-API, Bash</p>
-                </li>
-                <li>
-                    <h4>Dev Tools</h4>
-
-                    <p>Gulp, Grunt, Git, Browserify, Bower, NPM, Yeoman, Cordova, Ionic</p>
-                </li>
-                <li>
-                    <h4>UI/UX</h4>
-
-                    <p>Adobe PS/AI, Sketch, Axure, Invision, OmniGraffle, Optimizely</p>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-
-    <div class="section projects">
-        <div class="container">
-            <h3 class="section__title">Projetos</h3>
-            <ul class="section__list">
-                <li><a href="http://kollectiv.org/" target="_blank">
-                    <div class="project__image">
-                        <img src="media/projects/kollectiv.svg" class="project" title="Kollectiv"/>
-                    </div>
-                    <div class="project__name">Kollectiv</div>
-                    </a>
-                </li>
-                <li><a href="http://favstagram.me/" class="project" target="_blank">
-                    <div class="project__image">
-                        <img src="media/projects/favstagram.svg" class="project" title="Favstagram"/>
-                    </div>
-                    <div class="project__name">Favstagram</div>
-                </a>
-                </li>
-                <li><a href="http://colormeup.co/" class="project" target="_blank">
-                    <div class="project__image">
-                        <img src="media/projects/colormeup.svg" title="Colormeup"/>
-                    </div>
-                    <div class="project__name">Colormeup</div>
-                </a>
-                </li>
-                <li><a href="http://apps.facebook.com/abovetheskyline/" class="project" target="_blank">
-                    <div class="project__image">
-                        <img src="media/projects/skyline.svg" title="Above The Skyline"/>
-                    </div>
-                    <div class="project__name">Above The Skyline</div>
-                </a>
-                </li>
-                <li><a href="http://littlealchemyhelper.com/" class="project" target="_blank">
-                    <div class="project__image">
-                        <img src="media/projects/little-alchemy-helper.svg" title="Little Alchemy Helper"/>
-                    </div>
-                    <div class="project__name">LittleAlchemy Helper</div>
-                </a>
-                </li>
-            </ul>
-            <div class="projects__more">veja mais<br>
-                <a href="http://github.com/gilbarbara" target="_blank">Github</a> / <a href="http://codepen.io/gilbarbara/" target="_blank">Codepen</a></div>
-        </div>
-    </div>
-    <div class="section experience">
-        <div class="container">
-            <h3 class="section__title">Experiência</h3>
-            <ul class="section__list">
-                <li>
-                    <span>– Desde Dez/2014</span>
-                    <a href="http://kollectiv.org" class="title"
-                       target="_blank">Vérios Investimentos</a>
-                    Desenvolvimento de sistema de investimento automatizado (robo advisor)
-
-                    <em>Experiência: Node.js (Hapi), Javascript (React/Flux / Browserify), CSS3 (Sass / Less), MongoDB, Agile</em>
-                </li>
-
-                <li>
-                    <span>– Desde 2003</span>
-                    <a href="http://kollectiv.org" class="title" target="_blank">Kollectiv</a>
-                    Programador freelancer
-
-                    <em>Experiência: PHP (Wordpress/Laravel), Node.js (Express / Socket.io), Javascript (Backbone / Angular / D3), HTML5, SVG, CSS3 (Sass/Less), MySQL, MongoDB, Git, AWS, DevTools.</em>
-                </li>
-
-                <li>
-                    <span>– Entre 1997 e 2012</span>
-                    <a href="http://rraurl.com" class="title"
-                       target="_blank">rraurl.com</a>
-                    Sócio-Programador-Editor do primeiro site brasileiro sobre música e comportamento e com uma comunidade participativa.
-
-                    <em>Experiência: PHP, Ruby on Rails, HTML, Javascript, CSS, MySQL. SEO, metricas, comunidade, usabilidade.</em>
-                </li>
-
-                <li>
-                    <span>– Entre 1994 e 2010</span>
-                    Administrador de sistemas, programação e consultoria em produtoras de áudio e vídeo: Trattoria Filmes, Vetor Zero, Lobo Filmes, Dr. DD Música, O2 Filmes, Conspiração Filmes entre outras.
-                    <em>Experiência: Mac, Linux, Unix, Windows. Avid, Pro Tools, Flame, Inferno, Logic, Premiere, Final Cut Pro, After Effects. Desenvolvimento de plug-ins e bibliotecas de sistema.</em>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="section">
-        <div class="container">
-            <h3 class="section__title">Informações adicionais</h3>
-
-            <p>Um dos DJs pioneiros do Brasil na ativa desde 1987 – <a href="http://rraurl.com/gilbarbara"
-                                                                       target="_blank">http://rraurl.com/gilbarbara</a>
-            </p>
-        </div>
-    </div>
-</main>
-
+<div id="react"></div>
 <!-- build:js(.tmp) scripts/main.min.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
