refactor react to ES2015 classes

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <!-- build:css(.tmp) styles/main.min.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <!-- build:js(bower_components) scripts/modernizr.min.js -->
+    <!-- build:js(.) scripts/modernizr.min.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
 
@@ -34,8 +34,8 @@
     your browser</a> to improve your experience.</p>
 <![endif]-->
 <div id="react"></div>
-<!-- build:js(.tmp) scripts/main.min.js -->
-<script src="scripts/main.js"></script>
+<!-- build:js(.tmp) scripts/app.min.js -->
+<script src="scripts/app.js"></script>
 <!-- endbuild -->
 </body>
 </html>
